# trac_ik_baxter

./: CMakeLists.txt  README.md  package.xml
launch/: ik_server.launch
src/: ik_server.cpp
srv/: GetConstrainedPositionIK.srv
